<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="account_hint">昵称/邮箱/手机</string>
    <string name="another_group">换一组</string>
    <string name="app_name">美丽说</string>
    <string name="band_now">立即绑定</string>
    <string name="cancel">取消</string>
    <string name="captcha_get_failed">验证码获取失败，请检查网络连接~</string>
    <string name="captcha_notice_1">翻转至正确方向</string>
    <string name="capthca_empty_notice">请填写验证码</string>
    <string name="capture">请将二维码放入框内，即可自动扫描</string>
    <string name="capture_barcode_hint">请将条形码放入框内，即可自动扫描</string>
    <string name="capture_barcode_title">条形码</string>
    <string name="capture_hint">请将二维码放入框内，即可自动扫描</string>
    <string name="capture_title">二维码</string>
    <string name="change_avatar">更换头像</string>
    <string name="change_nickname1">填写完成 领取新人礼券</string>
    <string name="change_nickname2">填写完成</string>
    <string name="check_coupon">查看礼券</string>
    <string name="confirm">确定</string>
    <string name="continue_register">继续注册</string>
    <string name="country_area">国家与地区</string>
    <string name="country_num_prefix">+</string>
    <string name="coupon_got">领券成功</string>
    <string name="coupon_newer_text">新人礼券</string>
    <string name="detail_bottom_buy_btn">购买</string>
    <string name="detail_bottom_cart_btn">加入购物车</string>
    <string name="detail_btn_out_of_shelf_text">已下架</string>
    <string name="detail_btn_soldout_text">卖光啦</string>
    <string name="detail_can_not_less">不能再少了哦</string>
    <string name="detail_can_not_more">数量达到上限了哦</string>
    <string name="detail_cant_connect_to_self">不支持和自己私聊哟</string>
    <string name="detail_choose_at_title">\@人</string>
    <string name="detail_comment_post_text">发表</string>
    <string name="detail_composite_rate">综合评分</string>
    <string name="detail_confirm">确定</string>
    <string name="detail_contact">客服</string>
    <string name="detail_follow">关注</string>
    <string name="detail_follow_success">关注成功</string>
    <string name="detail_followed">已关注</string>
    <string name="detail_followed_eachother">互相关注</string>
    <string name="detail_good_comment">评价</string>
    <string name="detail_good_comment_empty">商品刚上架，还没有人来得及评价哦</string>
    <string name="detail_good_info">规格尺码</string>
    <string name="detail_good_pic_detail">详情</string>
    <string name="detail_i_see">我知道了</string>
    <string name="detail_image_swipe2pre_text">向右滑动，回到上一页</string>
    <string name="detail_invalid_user_for_message">这个菇凉匿名不想对话，找找其他菇凉对话吧</string>
    <string name="detail_like">收藏</string>
    <string name="detail_more_edit">编辑</string>
    <string name="detail_more_offline">下架</string>
    <string name="detail_more_online">上架</string>
    <string name="detail_recommend_text">热门</string>
    <string name="detail_sku_default">默认</string>
    <string name="detail_sku_left_quote">“</string>
    <string name="detail_sku_number">数量:</string>
    <string name="detail_sku_right_quote">”</string>
    <string name="detail_sku_sep">、</string>
    <string name="detail_sku_stock_prefix">库存:</string>
    <string name="detail_sku_stock_suffix">件</string>
    <string name="detail_sku_style_size_prefix">请选择</string>
    <string name="detail_sku_toast_size">请先选择A和B</string>
    <string name="detail_sku_toast_stock">该商品已售罄</string>
    <string name="detail_total_sell">总销量</string>
    <string name="detail_unfollow_success">取消关注</string>
    <string name="empty_phone_num_tip">请输入手机号</string>
    <string name="enter_account">请输入用户名</string>
    <string name="enter_password">输入密码</string>
    <string name="female">女</string>
    <string name="fill_captcha_subtitle">"验证码已发往 &lt;font color='#000000'>%1$s&lt;/font>，请等待"</string>
    <string name="fill_captcha_tex">获取验证码</string>
    <string name="fill_captcha_title">填写验证码</string>
    <string name="fill_name_hint">请设置您的昵称</string>
    <string name="fill_nick_tip">还没有给自己取名字哦</string>
    <string name="fill_password_hint">请设置登录密码</string>
    <string name="fill_password_max_notice">密码不能多于20位</string>
    <string name="fill_password_min_notice">密码不能少于6位</string>
    <string name="fill_password_title">设置密码</string>
    <string name="help_feedback">帮助支持</string>
    <string name="host_exit_confirm">再点一次，离开美丽说</string>
    <string name="host_tab_cart">购物车</string>
    <string name="host_tab_home">首页</string>
    <string name="host_tab_mine">我</string>
    <string name="i_see">我知道了</string>
    <string name="input_bank_captcha">输入验证码</string>
    <string name="input_captcha">请输入短信验证码</string>
    <string name="loading">加载中</string>
    <string name="login">登 录</string>
    <string name="login_captcha_empty_notice">请输入验证码</string>
    <string name="login_captcha_ok">确定</string>
    <string name="login_confirm_password">再输一次新密码</string>
    <string name="login_edit_password_success">密码修改成功，请重新登录</string>
    <string name="login_label_reset_password">设置密码</string>
    <string name="login_new_password">输入新密码</string>
    <string name="login_old_password">输入旧密码</string>
    <string name="login_password_confirm_not_empty">确认密码不能为空</string>
    <string name="login_password_new_empty">新密码不能为空</string>
    <string name="login_password_not_match">两次输入密码不一致</string>
    <string name="login_password_old_empty">旧密码不能为空</string>
    <string name="login_phone_bind_skip">跳过</string>
    <string name="login_slide_coupon_link">mgj://couponlist</string>
    <string name="long_click_to_follow">长按扫描二维码去关注</string>
    <string name="long_click_to_look_detail">长按扫描二维码查看详情</string>
    <string name="register_default_country_name">中国</string>
    <string name="login_finish_hasspace">完 成</string>
    <string name="login_get_captcha">获取验证码</string>
    <string name="login_reg_phone_catpcha_label">验证码</string>
    <string name="login_reg_phone_check_hint">输入验证码</string>
    <string name="login_reg_phone_input_hint">输入手机号</string>
    <string name="login_reg_phone_input_label">你的手机号码是？</string>
    <string name="login_sina_transfer_pwd_hint">输入密码</string>
    <string name="login_sina_transfer_pwd_label">密码</string>
    <string name="login_sina_transfer_uname_label">您在美丽说的昵称</string>
    <string name="mgjpf_find_pwd_input_captcha_hint">请输入验证码</string>
    <string name="mgjpf_find_pwd_input_captcha_text">验证码</string>
    <string name="mgjpf_find_pwd_input_id_num_hint">请输入身份证号码</string>
    <string name="mgjpf_find_pwd_input_id_text">证件号</string>
    <string name="mgjpf_find_pwd_input_name_hint">请输入真实姓名</string>
    <string name="mgjpf_find_pwd_input_name_text">姓名</string>
    <string name="mgjpf_find_pwd_phone_unusable">不可用?</string>
    <string name="mgjpf_find_pwd_safe_note1">为保证账户安全，请先验证身份信息</string>
    <string name="mgjpf_find_pwd_safe_note2">验证钱包手机号：</string>
    <string name="mgjpf_next_step">下一步</string>
    <string name="pref_bundle_debug">离线化调试页面</string>
    <string name="pref_default_enable_proxy_url">http://10.0.61.4:8181</string>
    <string name="pref_default_enable_proxy_url_raw">file:///data/data/@packageName/app_WebCache/dist/www</string>
    <string name="pref_default_virtual_host">http://www.localvirtualhost.com</string>
    <string name="pref_default_virtual_host_raw">file:///data/data/@packageName/app_WebCache</string>
    <string name="pref_summary_clear_cookie">点击删除cookie</string>
    <string name="pref_summary_cordova_js_inject">默认情况下，http页面会自动注入cordova.js</string>
    <string name="pref_summary_debug_js_inject">注入debug.js到页面中，然后能直接把报错信息输出到页面上</string>
    <string name="pref_summary_h5_demo">点击进入H5 demo页面</string>
    <string name="pref_summary_upload_model">点击上传机型到服务器</string>
    <string name="pref_title_clear_cookie">删除cookie</string>
    <string name="pref_title_clear_xwalk_config">删除xwalk配置文件</string>
    <string name="pref_title_clear_xwalk_so">删除xwalk库文件</string>
    <string name="pref_title_clear_xwalk_zip">删除xwalk下载包</string>
    <string name="pref_title_cordova_js_inject">cordova.js注入</string>
    <string name="pref_title_debug_js_inject">debug.js注入</string>
    <string name="pref_title_disable_caching">禁用缓存</string>
    <string name="pref_title_enable_proxy">本地代理模式</string>
    <string name="pref_title_enable_proxy_url">代理路径</string>
    <string name="pref_title_enable_proxy_url_raw">被代理路径</string>
    <string name="pref_title_h5_demo">H5 demo</string>
    <string name="pref_title_log">自动发布日志到服务端</string>
    <string name="pref_title_scan_dist_amr_files">查看dist.amr中的文件</string>
    <string name="pref_title_upload_model">上传机型到服务器</string>
    <string name="pref_title_upload_xwalk_crash_log">上传xwalk的crash日志</string>
    <string name="pref_title_use_base_cache">启动通用资源文件缓存(js、css)</string>
    <string name="pref_title_use_cache">启动资源文件缓存(js、css)</string>
    <string name="pref_title_use_debug">启动远程调试</string>
    <string name="pref_title_use_virtual_host">启动虚拟域</string>
    <string name="pref_title_use_xwalk">启动xwalk</string>
    <string name="pref_title_use_xwalk_force">强制启动xwalk</string>
    <string name="pref_title_virtual_host">虚拟域</string>
    <string name="pref_title_virtual_host_raw">需要替换成虚拟域的本地文件路径</string>
    <string name="pref_title_xwalk_config">xwalk配置文件</string>
    <string name="purse_mobile_change_captcha_hint">请输入短信验证码</string>
    <string name="purse_mobile_change_new_num_country">国家地区</string>
    <string name="purse_mobile_change_new_num_country_china">中国</string>
    <string name="purse_mobile_change_new_num_et_hint">请输入新手机号</string>
    <string name="purse_mobile_change_new_num_label">+86</string>
    <string name="purse_mobile_change_new_num_ok_btn">确认修改</string>
    <string name="purse_mobile_change_new_tips">修改为新手机号</string>
    <string name="purse_mobile_change_old_num_validate_ok">验证成功</string>
    <string name="register_next_step">下一步</string>
    <string name="str_mwp_adapter_get">MWP_Adapter GET 请求</string>
    <string name="str_mwp_cache_request">带缓存的请求</string>
    <string name="str_mwp_cache_request_offline">带离线缓存的请求</string>
    <string name="str_mwp_cache_service">缓存服务</string>
    <string name="str_mwp_get">MWP_SDK GET 请求</string>
    <string name="str_mwp_get_need_login">MWP_SDK GET 请求 需要登录</string>
    <string name="str_mwp_sid_invalid">使sid失效</string>
    <string name="str_net_get">测试 GET 请求</string>
    <string name="str_net_post">测试 POST 请求</string>
    <string name="str_net_post_multi_image">测试 POST 多图请求</string>
    <string name="str_net_post_single_image">测试 POST 单图请求</string>
</resources>