<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/test_get_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_net_get" />
    <Button android:id="@id/test_post_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_net_post" />
    <Button android:id="@id/test_post_single_image_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_net_post_single_image" />
    <Button android:id="@id/test_post_multi_image_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_net_post_multi_image" />
</LinearLayout>