<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/login_sina_transfer_uname_label" style="?attr/loginLabelStyle" />
    <EditText android:id="@id/label_uname" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:hint="@string/enter_account" style="?attr/loginEditTextStyle" />
    <com.mogujie.login.component.view.LabelEditText android:id="@id/password_ly" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:inputType="textPassword" android:imeOptions="actionGo" app:labelText="@string/login_sina_transfer_pwd_label" app:labelTextAppearance="?loginLabelTextAppearance" app:editTextHint="@string/login_sina_transfer_pwd_hint" app:editTextAppearance="?loginEditTextAppearance" style="?attr/loginPasswordEditTextStyle" />
    <Button android:id="@id/btn_done" android:layout_marginTop="60.0dip" android:text="@string/login_finish_hasspace" style="?attr/loginLargeButtonStyle" />
</LinearLayout>