<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/country_area" style="?attr/loginLabelStyle" />
        <TextView android:textAppearance="?loginEditTextAppearance" android:gravity="center" android:id="@id/country_text" android:background="@drawable/login_edittext_bg_default" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/register_default_country_name" android:drawableRight="@drawable/login_grey_right_arrow" />
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/login_reg_phone_input_label" style="?attr/loginLabelStyle" />
        <com.mogujie.login.component.view.ClearableEditText android:gravity="center" android:id="@id/phone_num_edit" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:hint="@string/login_reg_phone_input_hint" android:inputType="phone" style="?attr/loginEditTextStyle" />
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/login_reg_phone_catpcha_label" style="?attr/loginLabelStyle" />
        <FrameLayout android:orientation="horizontal" android:background="@drawable/login_edittext_bg_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <EditText android:gravity="center" android:id="@id/phone_captcha_input" android:background="@null" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_reg_phone_check_hint" android:inputType="phone" style="?attr/loginEditTextStyle" />
            <TextView android:textAppearance="?loginResendCaptchaTextAppearance" android:gravity="center" android:layout_gravity="right" android:id="@id/tv_get_captcha" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/login_get_captcha" style="?attr/loginLabelStyle" />
        </FrameLayout>
        <com.mogujie.login.coreapi.view.CaptchaView android:id="@id/captcha" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" />
        <Button android:id="@id/btn_next" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/register_next_step" style="?attr/loginLargeButtonStyle" />
    </LinearLayout>
</ScrollView>