<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/mgjpf_main_text_size2" android:textColor="@color/mgjpf_main_text_color1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/mgjpf_find_pwd_safe_note1" />
    <LinearLayout android:orientation="vertical" android:background="@color/mgjpf_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/pf_find_pwd_name_tv" android:text="@string/mgjpf_find_pwd_input_name_text" style="@style/PFRowTextView.PFRowLeftTextView" />
            <EditText android:id="@id/pf_find_pwd_input_name" android:layout_width="0.0dip" android:hint="@string/mgjpf_find_pwd_input_name_hint" android:layout_toRightOf="@id/pf_find_pwd_name_tv" android:layout_alignParentRight="true" style="@style/PFRowTextView.PFRowRightEditText" />
        </RelativeLayout>
        <View android:id="@id/pf_find_pwd_name_id_divider" android:background="@color/mgjpf_view_divider_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/pf_find_pwd_id_num_tv" android:text="@string/mgjpf_find_pwd_input_id_text" style="@style/PFRowTextView.PFRowLeftTextView" />
            <EditText android:id="@id/pf_find_pwd_input_id_num" android:layout_width="0.0dip" android:hint="@string/mgjpf_find_pwd_input_id_num_hint" android:maxLength="18" android:digits="1234567890Xx" android:layout_toRightOf="@id/pf_find_pwd_id_num_tv" android:layout_alignParentRight="true" style="@style/PFRowTextView.PFRowRightEditText" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:textSize="@dimen/mgjpf_main_text_size2" android:textColor="@color/mgjpf_main_text_color1" android:id="@id/pf_find_pwd_purse_phone_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mgjpf_find_pwd_safe_note2" />
        <TextView android:textSize="@dimen/mgjpf_main_text_size2" android:textColor="?pf_brand_text_color" android:id="@id/pf_find_pwd_purse_phone_unusable_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/mgjpf_find_pwd_phone_unusable" />
    </LinearLayout>
    <RelativeLayout android:background="@color/mgjpf_white" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/pf_find_pwd_captcha_tv" android:text="@string/mgjpf_find_pwd_input_captcha_text" style="@style/PFRowTextView.PFRowLeftTextView" />
        <EditText android:id="@id/pf_find_pwd_input_captcha" android:layout_width="0.0dip" android:hint="@string/mgjpf_find_pwd_input_captcha_hint" android:layout_toLeftOf="@id/pf_find_pwd_send_captcha_btn" android:layout_toRightOf="@id/pf_find_pwd_captcha_tv" style="@style/PFRowTextView.PFRowRightEditText.InputCaptcha" />
        <com.mogujie.mgjpfbasesdk.widget.PFCaptchaButton android:id="@id/pf_find_pwd_send_captcha_btn" android:layout_alignParentRight="true" android:layout_centerVertical="true" app:countDownQuantityInSecond="60" style="@style/MGJPF_tv_btn.PFCaptcha" />
        <View android:layout_toLeftOf="@id/pf_find_pwd_send_captcha_btn" style="@style/mgjpf_basesdk_vdivider" />
    </RelativeLayout>
    <TextView android:enabled="false" android:id="@id/pf_find_pwd_next_btn" android:layout_width="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="50.0dip" android:layout_marginRight="15.0dip" android:text="@string/mgjpf_next_step" style="@style/MGJPF_tv_btn" />
</LinearLayout>