<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/mgjpf_main_text_title_size" android:textColor="@color/mgjpf_brand_text_color" android:layout_gravity="center_horizontal" android:id="@id/mobile_change_new_num_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="45.0dip" android:text="@string/purse_mobile_change_old_num_validate_ok" />
    <TextView android:textSize="@dimen/mgjpf_main_text_size2" android:textColor="@color/mgjpf_main_text_color1" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="30.0dip" android:text="@string/purse_mobile_change_new_tips" />
    <LinearLayout android:orientation="vertical" android:background="@color/mgjpf_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:divider="@drawable/pf_linearlayout_horizonal_divider" android:showDividers="middle" android:dividerPadding="15.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/mobile_change_country_label" android:layout_width="wrap_content" android:text="@string/purse_mobile_change_new_num_country" style="@style/PFRowTextView.PFRowLeftTextView" />
            <TextView android:id="@id/mobile_change_country_tv" android:layout_width="0.0dip" android:text="@string/purse_mobile_change_new_num_country_china" android:layout_toRightOf="@id/mobile_change_country_label" android:layout_alignParentRight="true" style="@style/PFRowTextView.PFRowRightEditText" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/mobile_change_new_num_label" android:layout_width="45.0dip" android:text="@string/purse_mobile_change_new_num_label" style="@style/PFRowTextView.PFRowLeftTextView" />
            <com.mogujie.mgjpfbasesdk.widget.PFClearableEditText android:id="@id/mobile_change_new_num_et" android:layout_width="fill_parent" android:hint="@string/purse_mobile_change_new_num_et_hint" android:layout_toRightOf="@id/mobile_change_new_num_label" android:inputType="number" style="@style/PFRowTextView.PFRowRightEditText" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/mobile_change_captcha_et" android:layout_width="fill_parent" android:hint="@string/purse_mobile_change_captcha_hint" android:layout_toLeftOf="@id/mobile_change_captcha_btn" style="@style/PFRowTextView.PFRowRightEditText.InputCaptcha" />
            <View android:layout_toLeftOf="@id/mobile_change_captcha_btn" style="@style/mgjpf_basesdk_vdivider" />
            <com.mogujie.mgjpfbasesdk.widget.PFCaptchaButton android:enabled="false" android:id="@id/mobile_change_captcha_btn" android:layout_alignParentRight="true" android:layout_centerVertical="true" app:countDownQuantityInSecond="60" app:isAuto="false" style="@style/MGJPF_tv_btn.PFCaptcha" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:id="@id/mobile_change_modify_btn" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/purse_mobile_change_new_num_ok_btn" style="@style/MGJPF_tv_btn" />
</LinearLayout>