<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/login_content_view" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView android:id="@id/tv_unsafe_tip" style="@style/DefaultLoginNotAllowTipStyle" />
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" android:text="@string/country_area" style="?attr/loginLabelStyle" />
        <TextView android:textAppearance="?loginEditTextAppearance" android:gravity="center" android:id="@id/country_text" android:background="@drawable/login_edittext_bg_default" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="15.0dip" android:text="@string/register_default_country_name" android:drawableRight="@drawable/login_grey_right_arrow" />
        <com.mogujie.login.component.view.LabelEditText android:id="@id/login_uname_ly" android:background="@drawable/login_edittext_bg_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:inputType="phone" android:imeOptions="actionNext" app:labelText="@string/login_reg_phone_input_label" app:labelTextAppearance="?loginLabelTextAppearance" app:editTextHint="@string/login_reg_phone_input_hint" app:editTextAppearance="?loginEditTextAppearance" />
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/login_reg_phone_catpcha_label" style="?attr/loginLabelStyle" />
        <FrameLayout android:orientation="horizontal" android:background="@drawable/login_edittext_bg_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="15.0dip">
            <EditText android:gravity="center" android:id="@id/phone_captcha_input" android:background="@null" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_reg_phone_check_hint" android:inputType="phone" style="?attr/loginEditTextStyle" />
            <TextView android:textAppearance="?loginResendCaptchaTextAppearance" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/tv_get_captcha" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/login_get_captcha" style="?attr/loginLabelStyle" />
        </FrameLayout>
        <com.mogujie.login.coreapi.view.CaptchaView android:gravity="center" android:id="@id/mg_login_captcha" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="17.5dip" android:layout_marginRight="15.0dip" />
        <Button android:id="@id/login_btn" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/login" style="?attr/loginLargeButtonStyle" />
    </LinearLayout>
</ScrollView>